# pyspark-error-match

./: README.md  errors.py  pyproject.toml
