[tool.poetry]
name = "pyspark-error-match"
version = "0.1.0"
description = ""
authors = ["Mateus D Souza <desouza.mateus1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.4"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
